# dmsc_code_challenge

./: .gitignore  .pylintrc  Dockerfile  Makefile  README.md  pyproject.toml  sample_story.md  validate_metadata.py
test/: test_validate_metadata.py
test/fixtures/: example.csv
