[tool.poetry]
name = "dmsc-code-challenge"
version = "0.1.0"
description = ""
authors = ["Sony Pictures DMSC <dmg_support@spe.sony.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-describe = "^2.0.1"
pytest-mock = "^3.7.0"
pytest-icdiff = "^0.5"
pylint = "^2.13"

[tool.pytest.ini_options]
required_plugins = "pytest-describe pytest-icdiff"
addopts = "-ra"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

